<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/select_colors"
        android:icon="@drawable/ic_select_colors"
        android:title="@string/select_colors"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="3"
        app:showAsAction="never" />

</menu>